Fix overflow for Chrome on Windows

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -50,12 +50,6 @@ $fa-warning: "\f071";
   }
 }
 
-.truncated-line {
-  white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
-}
-
 .excerpt {
   max-width: 300px;
 }
