--- a/app/assets/stylesheets/components/_data-table.scss
+++ b/app/assets/stylesheets/components/_data-table.scss
@@ -11,6 +11,12 @@ $data-table-cell-padding-horizontal: 10px;
         border-bottom-width: 1px;
         overflow: auto;
         padding: $data-table-cell-padding-vertical $data-table-cell-padding-horizontal;
+
+        &.truncated-line {
+          white-space: nowrap;
+          overflow: hidden;
+          text-overflow: ellipsis;
+        }
       }
 
       > th.hint:after {
